--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
 encrypt passwords (using Bcrypt)
-determine site idea - daily rating || Dinnerplan ||
 close database?
 make database module or something
 appearance
 make 404 page
 Change password / delete account
 add email stuff
+rate table in db
+rate posting to server
+rating retrieving from server
+nice home and logout buttons
