improved code clarity for main.js and started on account page

--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,6 @@ make 404 page
 Change password / delete account (account page)
 add email stuff
 nice home and logout buttons
-previous ratings overview / data analysis
+Ratings data analysis
 Make date parsing less weird ? (without multiple date objects and w/e)
+jquery using statusCode instead of succes/error
