--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,7 @@ appearance
 make 404 page
 Change password / delete account (account page)
 add email stuff
-nice home and logout buttons
+nicer home and logout buttons
 Ratings data analysis
 Make date parsing less weird ? (without multiple date objects and w/e)
 jquery using statusCode instead of succes/error
