initial data analysis added

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,11 @@
 close database?
 appearance
 make 404 page
-Change password / delete account (account page)
+delete account (account page)
 add email stuff
-nicer home and logout buttons
-Ratings data analysis
+Ratings data analysis (nice graphs and such)
 Make date parsing less weird ? (without multiple date objects and w/e)
 jquery using statusCode instead of succes/error
+text on home page
+selected score on rating scale visual cue
+export/import data
