--- a/todo.txt
+++ b/todo.txt
@@ -8,4 +8,4 @@ Make date parsing less weird ? (without multiple date objects and w/e)
 jquery using statusCode instead of succes/error
 text on home page
 selected score on rating scale visual cue
-export/import data
+jquery form submit on file upload
