--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,8 @@ Make date parsing less weird ? (without multiple date objects and w/e)
 jquery using statusCode instead of succes/error
 text on home page
 indication of succesful importation of data
-robustness of data import
 make ratings list have two columns
-analysis from past month/week only
+analysis from past month/week only (past month/ past year/ all time option)
 data analysis interactivity
+trim log input fields before sending them, also forbidden characters and such
+remove/edit other than today ratings
