--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,9 @@ More data visualizations
 Make date parsing less weird ? (without multiple date objects and w/e)
 jquery using statusCode instead of succes/error
 text on home page
-indication of succesful importation of data
+indication of succesful/erroneous importation of data (properly)
 make ratings list have two columns
 analysis from past month/week only (past month/ past year/ all time option)
 data analysis interactivity
 trim log input fields before sending them, also forbidden characters and such
-remove/edit other than today ratings
+clear rating button on main
