--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@ close database?
 appearance
 add email stuff
 More data visualizations
-Make date parsing less weird ? (without multiple date objects and w/e)
+Make date parsing less weird ? (without multiple date objects and w/e) (also yyyy-mm-dd?)
 jquery using statusCode instead of succes/error
 text on home page
 indication of succesful/erroneous importation of data (properly)
@@ -10,3 +10,10 @@ make ratings list have two columns
 analysis from past month/week only (past month/ past year/ all time option)
 data analysis interactivity
 trim log input fields before sending them, also forbidden characters and such
+Select your own color for visualizations?
+Host this thing somewhere somehow to see if it might work
+Icon
+Fix the background not covering the whole page when the window gets resized
+other browser support
+better navigation menu
+for robustness check for req body content if it exists in router
